Commented out attempted stretch animation to remove menu bug

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -41,6 +41,9 @@
   color: #ffffff;
   background-color: #931d25;
 }
+.dropdown .dropdown-hidden {
+  display: none;
+}
 .tabs {
   width: 100%;
 }
