--- a/components/Dropdown/Dropdown.less
+++ b/components/Dropdown/Dropdown.less
@@ -39,9 +39,9 @@
     }
   }
   
-  // .dropdown-hidden {
-  //   display: none;
-  // }
+  .dropdown-hidden {
+    display: none;
+  }
 }
 
 
